# dolas_file_creater

./: CMakeLists.txt
source/: main.cpp
template/: template.cpp  template.h
